syntax = "proto3";

import "protos/lease_sheet_definitions.proto";

// Service for Lease Managers to communicate with TM

message LeaseRequest { Lease lease_details = 1; }

message LeaseResponse {}

message LeaseSheetRequest { 
    LeaseSheet lease_sheet = 1; 
    int32 id = 2;
}

message LeaseSheetResponse {}

service LMTMCommunicationService {
  rpc ProcessLeaseRequest(LeaseRequest) returns (LeaseResponse);
  rpc GetLeaseSheet(LeaseSheetRequest) returns (LeaseSheetResponse);
}
