syntax = "proto3";

// Service where Transaction Managers talk between themselves

import "protos/lease_sheet_definitions.proto";

message PropagateLeasesRequest {
  Lease lease = 1;
  int32 id = 2;
  string senderId = 3;
}

message URBroadCastRequest {
	string sender = 1;
	repeated DADIntCopy message = 2;
	int32 timeStamp = 3;
}

message URBroadCastReply {
	int32 ack = 1;
}

message DADIntCopy {
	string key = 1;
	int32 value = 2;
}

message PropagateLeasesReply {}

service CrossServerTransactionManagerService {
  rpc PropagateLeases(PropagateLeasesRequest) returns (PropagateLeasesReply);
  rpc URBroadCast (URBroadCastRequest) returns (URBroadCastReply);
}
